ligolang/src/test/contracts/negative/error_syntax.ligo
type foo is bar - 42